[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pages-telegram-blog"
version = "1.0.0"
description = "Minimal static blog with GitHub Actions cross-posting to Telegram"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "mypy>=1.8.0",
    "ruff>=0.5.0",
    "types-requests>=2.31.0",
]

[tool.setuptools]
py-modules = []

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "UP",      # pyupgrade
    "SIM",     # flake8-simplify
]
ignore = ["E501"]  # line too long (handled by formatter)

# MyPy configuration
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
